--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <h2>注目アーティスト</h2>
                 <article>
-                    <img src="C:\Users\daiki\OneDrive\デスクトップ\images\tomosuke.jpg" alt="Tomosuke" class="artist-img">
+                    <img src=images\tomosuke.jpg" alt="Tomosuke" class="artist-img">
                     <h3>Tomosuke（トモスケ）</h3>
                     <p>Tomosuke（トモスケ）は、現代の音楽シーンにおいて独自の存在感を放つ作曲家である。練馬春日駅から徒歩10分の閑静な住宅街に住まいを構え、その静かな環境が彼の創作活動に深い影響を与えている。大学では建築学を専攻し、その学びが彼の音楽に対するアプローチにも色濃く反映されている。彼は音楽を構築することを建築物を設計するかのように考え、音の一つ一つが緻密に組み合わさることで美しいハーモニーを生み出している。</p>
         
