--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <h2>最新ニュース</h2>
                 <article>
-                    <h3>新しいEDMトラックがリリースされました！</h3>
+                    <h3>RISE UPがリリースされました！</h3>
                     <p>最新のEDMトラックが発表されました。詳細は以下のリンクからご確認ください。</p>
                     <a href="https://open.spotify.com/intl-ja/artist/7inMOikSDWYkhBR5QhI2Jb?si=24sqQjhgSbOMQOLkDPzRjw" target="_blank">続きを読む</a>
                 </article>
