--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <div class="container">
             <h1>洋楽 & EDM情報</h1>
             <nav>
-                <ul>
-                    <li><a href="#news">ニュース</a></li>
-                    <li><a href="#artists">アーティスト</a></li>
-                    <li><a href="#reviews">レビュー</a></li>
-                    <li><a href="#events">イベント</a></li>
-                    <li><a href="#playlists">プレイリスト</a></li>
-                </ul>
+                <div class="dropdown">
+                    <button class="dropbtn">メニュー</button>
+                    <div class="dropdown-content">
+                        <a href="#news">ニュース</a>
+                        <a href="#artists">アーティスト</a>
+                        <a href="#reviews">レビュー</a>
+                        <a href="#events">イベント</a>
+                        <a href="#playlists">プレイリスト</a>
+                    </div>
+                </div>
             </nav>
         </div>
     </header>
