--- a/index.html
+++ b/index.html
@@ -101,5 +101,7 @@
             <p>&copy; 2024 洋楽 & EDM情報. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
